<resources>
    <string name="app_name">CareLynk</string>
    <string name="google_api_key">AIzaSyD2ncaSbNnw6rjv6C3ZA-EBjV4AG3Kt5qo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="invite_text">Join CareLynk \nHi \nI found CareLynk a awesome platform to share and care. Join me by clicking here. Join Now \nhttps://www.carelynk.com \nOr \nDownload App \nhttps://play.google.com/store/apps/details?id=com.carelynk</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="registation">Registation</string>
    <string name="remember_me">Remember Me</string>
    <string name="dummy_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
    <string name="logout">Logout</string>
    <string name="sure_logout">Are you sure want to logout?</string>
    <string name="register_if_not_member">No account yet? Register</string>
    <string name="my_profile">Profile</string>
    <string name="my_timeline">Highlight</string>
    <string name="my_group">My Group</string>
    <string name="support_group">Support Group</string>
    <string name="my_forum">My Forum</string>
    <string name="health_feed">Health Feed</string>
    <string name="my_event">My Event</string>
    <string name="my_search">Search</string>
    <string name="back_to_login">Back To Login</string>
    <string name="add_photo">Add your photo</string>
    <string name="follow">Follow</string>
    <string name="create_topic">Create Topic</string>
    <string name="your_interest">Your interest</string>
    <string name="group_focus">Group Focus</string>
    <string name="topic_timeline">Topic Timeline</string>
    <string name="my_friends">My Friends</string>
    <string name="enter_topic_name">Enter Topic Name</string>
    <string name="description">Description</string>
    <string name="frirnds_list">Friends List</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="category">Category</string>
    <string name="select_category">Select Category</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="create_focus">Create Focus</string>
    <string name="create_group">Create Group</string>
    <string name="create_forum">Create Focus</string>
    <string name="forum_timeline">Forum Timeline</string>
    <string name="update_goal">Update Goal</string>
    <string name="focus_timeline">Focus Timeline</string>
    <string name="goal_detail">Goal Details</string>
    <string name="group_detail">Group Details</string>
    <string name="update_group">Update Group</string>
    <string name="want_to_share_ask">Want to share something or ask?</string>
    <string name="post">Post</string>

    <string name="no_internet">No Internet Connection</string>
    <string name="error_server">Server Error!</string>
    <string name="search">Search</string>
    <string name="make_this_group_is_private">Make this group as private</string>
    <string name="create">Create</string>
    <string name="create_event">Create Event</string>
    <string name="invite">Invite</string>
    <string name="submit">Submit</string>
    <string name="enter_name">Please enter name</string>
    <string name="enter_date_of_birth">Please enter date of birth</string>
    <string name="enter_confirm_pass">Please enter confirm password</string>
    <string name="pass_not_match">Password is not match</string>
    <string name="enter_contact_no">Please enter contact no</string>
    <string name="enter_correct_contact_no">Please enter correct contact no</string>
    <string name="enter_correcr_email">Please enter correct email</string>
    <string name="select_who_am_i">Please select who am i</string>
    <string name="select_gender">Please select gender</string>
    <string name="enter_about_me">Please enter about me</string>
    <string name="select_interest">Select your interest</string>
    <string name="forget_pass">Forgot Password</string>
    <string name="send">Send</string>
    <string name="comment">Comment</string>
    <string name="registation_success">Registation Success</string>
    <string name="event_adress">Enter Location or Address</string>
    <string name="are_you_sure_logout">Are you sure want to logout?</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_delete">Are you sure want to delete?</string>
    <string name="edit_event">Edit Event</string>
    <string name="ask_a_question">Ask a Question?</string>
    <string name="write_a_article">Write a Article</string>
    <string name="tag_line">Helping you to lead a Stronger and Healthier Life</string>
    <string name="search_from_google">Search From Google</string>
    <string name="event_detail">Event Detail</string>
    <string name="event">Event</string>
    <string name="trending">Trending</string>
    <string name="requests">Requests</string>
    <string name="invite_users">Invite Users</string>
    <string name="view_members">View Members</string>
    <string name="join_now">Join Now</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="zipcode">Zipcode</string>
    <string name="edit_group">Edit Group</string>
    <string name="discover">Discover</string>
    <string name="dashboard">Dashboard</string>
    <string name="invite_people">Invite People</string>
    <string name="sign_out">Sign Out</string>
    <string name="article">Article</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="make_this_event_is_private">Make This Event Private</string>
    <string name="no_data_avail">No Data Available!</string>
    <string name="something_went_wrong">Something went wrong, Try Later!</string>
    <string name="chat">Messages</string>

    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="about_me">
        <item>Who am I</item>
        <item>Individual</item>
        <item>Entity</item>
    </string-array>

    <string-array name="register_as">
        <item>Register As</item>
        <item>Individual</item>
        <item>Entity</item>
    </string-array>

    <string-array name="interest_area">
        <item>Baby Health</item>
        <item>Kids Health</item>
        <item>Teenage Health</item>
        <item>Men and Women Health</item>
        <item>Elderly Health</item>
        <item>Parenting</item>
        <item>Pregnancy</item>
        <item>Nutrition</item>
        <item>Recipe</item>
        <item>Exercise</item>
        <item>Yoga</item>
        <item>Weight Loss</item>
        <item>Special needs kids</item>
    </string-array>

    <string-array name="group_category">
        <item>Select Group Category</item>
        <item>Health</item>
        <item>Pregnancy</item>
        <item>Seek</item>
    </string-array>
</resources>
