<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />-->

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView" />

    <group android:id="@+id/menu_group">
        <!-- <item android:id="@+id/menu_event"
             android:title="@string/my_event" />

         -->

        <item
            android:id="@+id/menu_profile"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/menu_chat"
            android:title="@string/chat" />

        <item
            android:id="@+id/menu_invite"
            android:title="@string/invite_people" />

        <item
            android:id="@+id/menu_dashboard"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/menu_discover"
            android:title="@string/discover" />

        <item
            android:id="@+id/menu_logout"
            android:title="@string/sign_out" />

    </group>

</menu>
