<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="boolean" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/txtApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:font="@{`bold`}"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="40sp" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_below="@+id/txtApp"
            android:fillViewport="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:font="@{`bold`}"
                    android:padding="@dimen/common_margin"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:textSize="25sp" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardBackgroundColor="@android:color/white"
                    card_view:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/enter_email"
                            android:inputType="textEmailAddress"
                            app:font="@{`light`}"
                            android:drawableLeft="@drawable/ic_mail"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:drawablePadding="@dimen/common_margin"
                            android:padding="@dimen/activity_horizontal_margin" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/textColor" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/enter_password"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:drawableLeft="@drawable/ic_pass"
                            android:inputType="textPassword"
                            app:font="@{`light`}"
                            android:drawablePadding="@dimen/common_margin"
                            android:padding="@dimen/activity_horizontal_margin" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin"
                    android:text="@string/remember_me"
                    app:font="@{`medium`}"
                    android:textColor="@android:color/white" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:font="@{`medium`}"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/login"
                    android:theme="@style/ButtonStyle" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/registation"
                    android:visibility="gone"
                    android:theme="@style/ButtonStyleDark" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>


        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_if_not_member"
            android:textColor="@android:color/white"
            app:font="@{`medium`}"
            android:layout_alignParentBottom="true"
            android:textAppearance="?android:textAppearanceMedium" />
    </RelativeLayout>
</layout>
