<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_app_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/imgUser"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtFollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="12"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/colorAccent"
                    app:font="@{`bold`}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="Following"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/black"
                    app:font="@{`light`}" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                tools:src="@drawable/ic_placeholder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imgUser"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtFollowers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="5"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/colorAccent"
                    app:font="@{`bold`}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="Followers"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/black"
                    app:font="@{`light`}" />

            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relProfile"
            android:layout_centerHorizontal="true"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="Anmes"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorAccent"
            app:font="@{`light`}" />

        <TextView
            android:id="@+id/txtAboutMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtName"
            android:layout_centerHorizontal="true"
            android:background="@android:color/white"
            android:gravity="center"
            android:padding="10dp"
            android:text="About me"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/black"
            app:font="@{`light`}" />

        <LinearLayout
            android:id="@+id/lin_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtAboutMe"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/colorLightWhite"
            android:orientation="horizontal">

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorLightWhite" />

            <TextView
                android:id="@+id/txt_article"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:tag="1"
                android:text="@string/article"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black"
                app:font="@{`bold`}" />

            <TextView
                android:id="@+id/txt_question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:tag="0"
                android:text="@string/question"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorAccent"
                app:font="@{`bold`}" />

            <TextView
                android:id="@+id/txt_answer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:tag="0"
                android:text="@string/answer"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorAccent"
                app:font="@{`bold`}" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorLightWhite" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/lin_header"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:padding="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/common_margin" />

            <TextView
                android:id="@+id/txt_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:text="@string/no_data_avail"
                />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="40dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </RelativeLayout>

</layout>