<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

   <!-- <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPaddingLeft="-5dp"
        app:contentPaddingRight="-5dp">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgUser"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/dummy_img" />

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/common_margin"
                        android:layout_toRightOf="@+id/imgUser"
                        android:fontFamily="sans-serif-condensed"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@android:color/black"
                        tools:text="Helloo" />

                    <TextView
                        android:id="@+id/txtPostTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtName"
                        android:layout_marginLeft="@dimen/common_margin"
                        android:layout_marginTop="5dp"
                        android:layout_toRightOf="@+id/imgUser"
                        android:fontFamily="sans-serif-condensed"
                        android:text="Posted on 2 hours ago"
                        android:textColor="@color/color_text_dark" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/txtDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_margin"
                    android:layout_marginTop="@dimen/common_margin"
                    android:layout_toRightOf="@+id/imgUser"
                    android:text="@string/dummy_text"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:visibility="visible" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imgCover"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:src="@drawable/dummy_bg_img"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center"
                android:orientation="horizontal"
                android:padding="@dimen/activity_horizontal_margin">


                <CheckBox
                    android:id="@+id/chkFav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_margin"
                    android:layout_marginRight="@dimen/common_margin"
                    android:button="@drawable/checkbox_selector_fav"
                    android:text=" Support"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/txt_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_comment"
                    android:drawablePadding="2dp"
                    android:gravity="center"
                    android:text="12 Chat"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorAccent" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                android:visibility="visible" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/round_corner_grey"
                android:hint="@string/comment"
                android:padding="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/imgCamera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_toLeftOf="@+id/btnSend"
                    android:src="@drawable/ic_camera_blue" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnSend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/send"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:theme="@style/ButtonStyle"
                     />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@color/color_app_bg"
                />


        </LinearLayout>


    <!--</android.support.v7.widget.CardView>-->


</LinearLayout>